updated slides pages

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,5 +32,5 @@
 </ion-content>
 
 <ion-footer>
-  <h2><a href="https://johnwargo.com.com" target="_blank">by John M. Wargo</a></h2>
+  <p>From <a href="https://johnwargo.com" target="_blank">John M. Wargo</a></p>
 </ion-footer>
