--- a/src/app/slides1/slides1.page.html
+++ b/src/app/slides1/slides1.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Slides1</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Slides (No Text)</ion-title>
   </ion-toolbar>
 </ion-header>
 
