finished first pass at the project

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-title>
-      Ionic Slides Example App
-    </ion-title>
+    <ion-title> Ionic Slides Example </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="openRepo()">
         <ion-icon slot="icon-only" name="logo-github"></ion-icon>
