--- a/src/app/slides1/slides1.page.scss
+++ b/src/app/slides1/slides1.page.scss
@@ -2,8 +2,8 @@ ion-slide {
     background-color: white;
 }
 
-ion-img {    
-    display: block;
+ion-img {
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 75%;
