--- a/src/app/slides2/slides2.page.scss
+++ b/src/app/slides2/slides2.page.scss
@@ -3,7 +3,7 @@ ion-slide {
 }
 
 ion-img {    
-    display: block;
+    // margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 75%;
