--- a/src/app/slides1/slides1.page.html
+++ b/src/app/slides1/slides1.page.html
@@ -7,6 +7,40 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+
+  <ion-slides pager="true">
+    <ion-slide>
+      <ion-img class="screenshot" src="assets/intro-01.png"></ion-img>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-img class="screenshot" src="assets/intro-02.png"></ion-img>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-img class="screenshot" src="assets/intro-03.png"></ion-img>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-img class="screenshot" src="assets/intro-04.png"></ion-img>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-grid>
+        <ion-row>
+          <ion-img class="screenshot" src="assets/intro-05.png"></ion-img>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-button color="primary" style="margin-top:20px;" (click)="goHome()">
+              Go Home
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-slide>
+
+  </ion-slides>
 
 </ion-content>
