--- a/src/app/slides2/slides2.page.html
+++ b/src/app/slides2/slides2.page.html
@@ -8,5 +8,90 @@
 </ion-header>
 
 <ion-content>
+  <ion-slides pager="true">
+    <ion-slide>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <p>Time Slicer is like a <strong>Stopwatch</strong><br />with <strong>Categories</strong>.</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-img class="screenshot" src="assets/intro-01.png"></ion-img>
+          </ion-col>
+        </ion-row>        
+      </ion-grid>
+    </ion-slide>
 
+    <ion-slide>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <p>Start with an empty project list. <br />Tap + to add a new project.</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-img class="screenshot" src="assets/intro-02.png"></ion-img>
+          </ion-col>
+        </ion-row>      
+      </ion-grid>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <p>Projects consist of a Title <br />plus one or more category buttons.</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-img class="screenshot" src="assets/intro-03.png"></ion-img>
+          </ion-col>
+        </ion-row>        
+      </ion-grid>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <p>Tap on a project to open the Timer page.<br />Tap the Start button or one of the Category buttons to
+              start timing.</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-img class="screenshot" src="assets/intro-04.png"></ion-img>
+          </ion-col>
+        </ion-row>        
+      </ion-grid>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <p>Share the results with others.</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-img class="screenshot" src="assets/intro-05.png"></ion-img>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <!-- <ion-button color="primary" routerLink="/" routerDirection="forward" style="margin-top:20px;"> -->
+            <ion-button color="primary" style="margin-top:20px;" (click)="goHome()">
+              Go Home
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-slide>
+
+  </ion-slides>
 </ion-content>
