--- a/src/app/slides2/slides2.page.scss
+++ b/src/app/slides2/slides2.page.scss
@@ -1,5 +1,5 @@
 ion-slide {
-    background-color: white;
+    background-color: lightgrey;
 }
 
 ion-img {    
@@ -9,4 +9,8 @@ ion-img {
     width: 75%;
     max-width: 800px;
     max-height: 60%;
+}
+
+ion-button {
+    margin-bottom: 30px;
 }
