finishing it up

--- a/src/app/slides1/slides1.page.html
+++ b/src/app/slides1/slides1.page.html
@@ -11,25 +11,25 @@
 
   <ion-slides pager="true">
     <ion-slide>
-      <ion-img class="screenshot" src="assets/intro-01.png"></ion-img>
+      <ion-img src="assets/intro-01.png"></ion-img>
     </ion-slide>
 
     <ion-slide>
-      <ion-img class="screenshot" src="assets/intro-02.png"></ion-img>
+      <ion-img src="assets/intro-02.png"></ion-img>
     </ion-slide>
 
     <ion-slide>
-      <ion-img class="screenshot" src="assets/intro-03.png"></ion-img>
+      <ion-img src="assets/intro-03.png"></ion-img>
     </ion-slide>
 
     <ion-slide>
-      <ion-img class="screenshot" src="assets/intro-04.png"></ion-img>
+      <ion-img src="assets/intro-04.png"></ion-img>
     </ion-slide>
 
     <ion-slide>
       <ion-grid>
         <ion-row>
-          <ion-img class="screenshot" src="assets/intro-05.png"></ion-img>
+          <ion-img src="assets/intro-05.png"></ion-img>
         </ion-row>
         <ion-row>
           <ion-col>
