--- a/src/app/slides2/slides2.page.html
+++ b/src/app/slides2/slides2.page.html
@@ -18,7 +18,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-img class="screenshot" src="assets/intro-01.png"></ion-img>
+            <ion-img src="assets/intro-01.png"></ion-img>
           </ion-col>
         </ion-row>        
       </ion-grid>
@@ -33,7 +33,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-img class="screenshot" src="assets/intro-02.png"></ion-img>
+            <ion-img src="assets/intro-02.png"></ion-img>
           </ion-col>
         </ion-row>      
       </ion-grid>
@@ -48,7 +48,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-img class="screenshot" src="assets/intro-03.png"></ion-img>
+            <ion-img src="assets/intro-03.png"></ion-img>
           </ion-col>
         </ion-row>        
       </ion-grid>
@@ -64,7 +64,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-img class="screenshot" src="assets/intro-04.png"></ion-img>
+            <ion-img src="assets/intro-04.png"></ion-img>
           </ion-col>
         </ion-row>        
       </ion-grid>
@@ -79,7 +79,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-img class="screenshot" src="assets/intro-05.png"></ion-img>
+            <ion-img src="assets/intro-05.png"></ion-img>
           </ion-col>
         </ion-row>
         <ion-row>
